--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,70 @@
+body{
+	font-family: 'Spartan', sans-serif;
+}
+
+
 #contenedor{
 	width: 1200px;
 	margin:0px auto;
 }
 
+
+#contenido{
+}
+
 .imagenes{
-	width: 300px;
-	height: 300px;
-	background: red;
-	padding: 10px;
+	background: rgba(0,214,100);
 	margin: 15px;
-	display: inline-block;
+	display: inline flow-root list-item;
 	cursor: pointer;
 	transition: all 0.3s;
+	background-size: cover;
+	color: white;
+
+	flex: 1 0 auto; 
+            width:200px;
+	height: 300px;
+	overflow: hidden;
+
+}
+
+
+.fondo-verde{
+	padding: 10px;
+	opacity: 0;
+	transition: all 0.3s;
+	background-color: rgba(0,214,100);
+	background-image: url(../assets/img/logo-white.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	width: 100%;
+	height: 100%;
+	position: absolute;
 }
 
 
 .imagenes:hover {
-	opacity: 0.5;
-	
+
 	transition: all 0.3s;
+}
+
+.imagenes:hover .fondo-verde{
+	opacity: 1;
+	transition: all 0.3s;
+}
+
+
+.logo{
+	width: 300px;
+	height: 400px;
+	}
+
+
+
+@media only screen and (max-width: 1200px) {
+
+#contenedor{
+	width: 100%px;
+	margin:0px auto;
+}
 }
