--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,9 @@
+html, body{
+
+	height: 100%;
+}
+
+
 body{
 	font-family: 'Spartan', sans-serif;
 }
@@ -37,8 +43,8 @@ body{
 	background-image: url(../assets/img/logo-white.png);
 	background-position: center;
 	background-repeat: no-repeat;
-	width: 100%;
-	height: 100%;
+	width:180px;
+	height: 280px;
 	position: absolute;
 }
 
@@ -64,7 +70,17 @@ body{
 @media only screen and (max-width: 1200px) {
 
 #contenedor{
-	width: 100%px;
+	width: 90%;
 	margin:0px auto;
+	padding: 5%;
 }
+
+
+
+.imagenes, .fondo-verde{
+            width:100%;
+
+}
+
+
 }
