--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,11 +32,13 @@ body{
 	height: 300px;
 	overflow: hidden;
 
+	clip-path: polygon(0 13%, 100% 0%, 100% 87%, 0% 100%);
+
 }
 
 
 .fondo-verde{
-	padding: 10px;
+	padding: 60px 10px 10px 10px;
 	opacity: 0;
 	transition: all 0.3s;
 	background-color: rgba(0,214,100);
@@ -64,6 +66,11 @@ body{
 	width: 300px;
 	height: 400px;
 	}
+
+
+.numero{
+	font-size: 2.5em;
+}
 
 
 
